<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
      <TextView 
            android:id="@+id/textView_sessionID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sessionIDRequest"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <EditText
            android:id="@+id/editText_sessionID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/button_uploaddoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="uploadDocClick"
        android:text="@string/uploadDoc" />

    <Button
        android:id="@+id/button_createform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createFormClick"
        android:text="@string/createForm" />

    <Button
        android:id="@+id/button_attendencecheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="attendenceCheckClick"
        android:text="@string/attendanceCheck" />

</LinearLayout>