<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_results_sessionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_results_sessionID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_results_sessionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <ListView
        android:id="@+id/sessionResultsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>


    <Button
        android:id="@+id/button_endsession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endSessionButton"
        android:onClick="endSessionClick" />

    <Button
        android:id="@+id/button_savesession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveSessionButton"
        android:onClick="saveSessionClick" />

    <Button
        android:id="@+id/button_emailsession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailButton"
        android:onClick="emailSessionClick" />

</LinearLayout>